relative position and btn z-index resolves #31

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -42,6 +42,8 @@ button.formButton {
   text-decoration: none;
   border: 2px solid #ccc;
   border-radius: 4px;
+  position: relative;
+  z-index: 1;
 }
 
 button.formButton:hover {
